[package]
name = "basic-crud"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.18"
serde = { version = "1.0.188", features = ["derive"] }
shuttle-axum = "0.25.0"
shuttle-runtime = "0.25.0"
shuttle-shared-db = { version = "0.25.0", features = ["postgres-rustls"] }
sqlx = { version = "0.7.1", features = ["postgres"] }
tokio = "1.28.2"
